--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,7 +1,8 @@
 @import './variable.css';
 @import '../components/Button/style.css';
 @import '../components/container/style.css';
-
+@import '../components/Link/style.css';
+@import '../components/Icon/style.css';
 
 
 :root {
