--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,6 +4,7 @@
 @import '../components/Link/style.css';
 @import '../components/Icon/style.css';
 @import '../components/Collapse/style.css';
+@import '../components/Input/style.css';
 
 :root {
     font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
