--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,10 +1,14 @@
 @import './variable.css';
 @import '../components/Button/style.css';
-@import '../components/container/style.css';
+@import '../components/Container/style.css';
 @import '../components/Link/style.css';
 @import '../components/Icon/style.css';
 @import '../components/Collapse/style.css';
 @import '../components/Input/style.css';
+@import '../components/DatePicker/style.css';
+@import '../components/Form/style.css';
+@import '../components/DatePicker/style.css';
+
 
 :root {
     font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
