--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -17,7 +17,7 @@
 
     color-scheme: light dark;
     color: rgba(255, 255, 255, 0.87);
-    background-color: #a09494;
+    background-color: #f0abab;
 
     font-synthesis: none;
     text-rendering: optimizeLegibility;
