--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,8 +8,8 @@
 @import '../components/DatePicker/style.css';
 @import '../components/Form/style.css';
 @import '../components/DatePicker/style.css';
-
-
+@import '../components/Alert/style.css';
+@import '../components/Rate/style.css';
 :root {
     font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
