--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,6 +10,9 @@
 @import '../components/DatePicker/style.css';
 @import '../components/Alert/style.css';
 @import '../components/Rate/style.css';
+@import '../components/Tooltip/style.css';
+@import '../components/Switch/style.css';
+
 :root {
     font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
@@ -17,7 +20,7 @@
 
     color-scheme: light dark;
     color: rgba(255, 255, 255, 0.87);
-    background-color: #f0abab;
+    background-color: #4dd5e7;
 
     font-synthesis: none;
     text-rendering: optimizeLegibility;
